# updater

./: CMakeLists.txt  vcpkg.json
client/: CMakeLists.txt  client.cpp  client.h
server/: CMakeLists.txt  Watchdog.h  server.cpp
